--- a/AppCoder/templates/cursos.html
+++ b/AppCoder/templates/cursos.html
@@ -1,7 +1,7 @@
 {% extends 'padre.html' %}
 
 {% block contenidoQueCambia %}
-        <h1>Seccion de lista de cursos</h1>
+        <h1>Seccion de cursos</h1>
 
-        <p>Este es el listado de cursos.</p>
+        <p>Esta es la seccion de alumnos.</p>
 {% endblock contenidoQueCambia %}
