--- a/AppCoder/templates/inicio.html
+++ b/AppCoder/templates/inicio.html
@@ -1,7 +1,7 @@
 {% extends 'padre.html' %}
 
 {% block contenidoQueCambia %}
-        <h1>Seccion de lista de cursos</h1>
+        <h1>Titulo de inicio</h1>
 
-        <p>Este es el listado de cursos.</p>
+        <p>{{mensaje}}</p>
 {% endblock contenidoQueCambia %}
